--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -264,4 +264,17 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <!-- Add Transaction FAB -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddTransaction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/add_transaction"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@android:color/white"
+        app:backgroundTint="@color/colorAccent"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="24dp"
+        app:elevation="6dp" />
+
 </FrameLayout>
